# Cmake-SFML-3dengine

./: .gitignore  .gitmodules  CMakeLists.txt  ReadMe.md  ReadMe.txt
.cache/clangd/index/: RAIIWrapper.hpp.0CB1CF6895CBA648.idx  RAIIWrapper.hpp.CEEC15000697915F.idx  afadjust.c.AE90E5FEE8F8D0C4.idx  afadjust.c.D8019E57CA4AD401.idx  afadjust.h.2E08A24FF0557DE8.idx  afadjust.h.F23F5F996832326E.idx  afblue.c.479ABE9EC0A8C844.idx  afblue.c.DA08B8C7DDBCD6D9.idx  afblue.h.3146E3856C047568.idx  afblue.h.A2BAA65113429C8D.idx  afcjk.c.AAF9451182D7E36E.idx  afcjk.c.D763896A782FA5D3.idx  afcjk.h.08134AFAEB8EFAAE.idx  afcjk.h.B00DAD23724A6C29.idx  afcover.h.2F337852C62E07E2.idx  afcover.h.526CD6B7D8112101.idx  afdummy.c.1AA0BE8B2DCBA49A.idx  afdummy.c.425A93584A8265F8.idx  afdummy.h.06B1E87C7188440C.idx  afdummy.h.FABCFDA73A51480B.idx  aferrors.h.18E464E55C3A2025.idx  aferrors.h.AA4D51CD47226DEB.idx  afglobal.c.413E8D1529466B46.idx  afglobal.c.7554AED0B4B0E523.idx  afglobal.h.1C41448CE110B6B5.idx  afglobal.h.926DD17B46DD81AB.idx  afgsub.c.3C6AA46AF815A172.idx  afgsub.c.52F45D6ED81992B1.idx  afgsub.h.749DBE5EA03E9F41.idx  afgsub.h.B9EF081A4B3BF3B3.idx  afhints.c.29E412483324EA86.idx  afhints.c.8A14DCF4E93DA5D9.idx  afhints.h.476CE9AA451CA3D3.idx  afhints.h.8ECAD62755FFC3E3.idx  afindic.c.10FF1B3B96506B15.idx  afindic.c.1B6C26667C5493D2.idx  afindic.h.46B6290E81922CED.idx  afindic.h.7F87FFA319B99438.idx  aflatin.c.44AD5556AED588BC.idx  aflatin.c.A738958B4C72311B.idx  (+985 more)
build2/: CMakeCache.txt  Makefile  TST.ilk  cmake_install.cmake
include/: data.hpp  display.hpp  main.hpp  math.hpp  obj3d.hpp  stereograph.hpp
resources/objects/Arcanine/: Arcanine.mtl
resources/objects/apeman/: Apeman.mtl
resources/objects/wooper/: wooper.smd
resources/objects/yoshi/: yoshi.mtl
resources/sprites/: Sprite-0002.aseprite
src/: data.cpp  display.cpp  main.cpp  math.cpp  obj3d.cpp  stereograph.cpp
src/3d/: camera.cpp  camera.hpp  icosahedron.cpp  icosahedron.hpp  obj3d.cpp  obj3d.hpp  polygon.cpp  polygon.hpp
src/app/: display.cpp  display.hpp  main.cpp  object.cpp  object.hpp  window.cpp  window.hpp
src/cpuRender/: cpuRender.cpp  cpuRender.hpp
src/glShaders/: fragment.glsl  glShader.cpp  textVertex.glsl  vertex.glsl
src/gpuRender/: RAIIWrapper.hpp  gpuRender.cpp  gpuRender.hpp  text.cpp  text.hpp  window.cpp  window.hpp
src/openGL/: freeType.cpp  freeType.hpp  gl.cpp  gl.hpp  glObject.cpp  glObject.hpp  glRender.cpp  glRender.hpp  glText.cpp  glText.hpp  glWindow.cpp
src/sfml/: sfRender.cpp  sfRender.hpp  sfWindow.cpp  sfWindow.hpp
src/shaders/: 3d_fragment.glsl  3d_vertex.glsl  shader.cpp  shader.hpp
src/utils/: data.cpp  data.hpp  math.cpp  math.hpp  matrix.cpp  matrix.hpp  random.cpp  random.hpp  utils.cpp  utils.hpp
